# buacshell-rs

./: Cargo.toml  README.md  build.rs
resources/: figlet
src/: bua.rs  initialisation.rs  main.rs
