[package]
name = "buacshell-rs"
version = "0.1.0"
authors = ["Ernesto Martínez García <ecomaikgolf@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
minreq = { version = "2.2.0", features = ["https"] }
select = "0.5.0"
libknox = "0.4.0"
rpassword = "0.0.4"
colorful = "0.2.1"
figlet-rs = "0.1.3"
dirs = "3.0"

[build-dependencies]
dirs = "3.0"
